--- a/2_gradients/assets/style.css
+++ b/2_gradients/assets/style.css
@@ -1,26 +1,56 @@
 body {
   margin: 0;
   height: 100vh;
-  background-color: #1e2326;
   display: grid;
-  justify-items: center;
-  align-items: center;
+  place-content: center;
+  background-color: #1e2326;
 }
 
 body::before {
   --size: 60px;
+  --line-w: 2px;
   --line: hsl(216 3% 75% / 0.15);
+  --tiles: transparent;
   content: '';
-  height: 100vh;
-  width: 100vw;
-  position: fixed;
-  background: linear-gradient(90deg,
-      var(--line) 1px,
-      transparent 1px var(--size)) 50% 50% / var(--size) var(--size),
-    linear-gradient(var(--line) 1px, transparent 1px var(--size)) 50% 50% / var(--size) var(--size);
-  mask: linear-gradient(-15deg, transparent 30%, white);
+  position: absolute;
   top: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(90deg,
+      var(--line) var(--line-w),
+      var(--tiles) 1px var(--size)) 50% 50% / var(--size) var(--size),
+    linear-gradient(var(--line) var(--line-w), var(--tiles) 1px var(--size)) 50% 50% / var(--size) var(--size);
   transform-style: flat;
   pointer-events: none;
-  z-index: -1;
+}
+
+.tiles {
+  height: 50vh;
+  aspect-ratio: 1/1;
+  position: relative;
+  background: linear-gradient(to right,
+      #906CF2,
+      #DE2369,
+      #906CF2);
+  background-size: 200%;
+  animation: b-pan 5s linear infinite;
+  border-radius: 2rem;
+}
+
+.tiles::before {
+  content: "";
+  position: absolute;
+  background: #3B3B40;
+  border-radius: inherit;
+  inset: 0.25rem;
+}
+
+@keyframes b-pan {
+  0% {
+    background-position: 0% center;
+  }
+
+  100% {
+    background-position: -200% center;
+  }
 }
