--- a/3_animated_shape/assets/style.css
+++ b/3_animated_shape/assets/style.css
@@ -34,14 +34,14 @@ body::before {
       #906CF2,
       #DE2369,
       #906CF2);
-  background-size: 200%;
+  background-size: 600%;
   animation: b-pan 16s linear infinite alternate;
 }
 
 .tiles::before {
   content: "";
   position: absolute;
-  background: #3B3B40;
+  background: transparent;
   border-radius: inherit;
   inset: 0.25rem;
 }
@@ -51,9 +51,28 @@ body::before {
   0%,
   100% {
     background-position: 0% center;
+    border-radius: 20rem;
+    transform: translateX(0) translateY(8rem);
+  }
+
+  20%,
+  80% {
+    height: 46vh;
+    border-radius: 74% 26% 24% 76% / 38% 29% 71% 62%;
+    transform: translateX(6rem) translateY(-4rem) rotate(20deg);
+  }
+
+  40%,
+  90% {
+    height: 50vh;
+    border-radius: 40% 60% 41% 59% / 29% 53% 47% 71%;
+    transform: translateX(-6rem) translateY(6rem) rotate(-20deg);
   }
 
   50% {
-    background-position: -200% center;
+    height: 54vh;
+    transform: translateX(0) translateY(-8rem);
+    background-position: -300% center;
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
   }
 }
